# minnow

./: CMakeLists.txt
etc/: cflags.cmake
notes/: CMake简介.md
